--- a/test1.ipynb
+++ b/test1.ipynb
@@ -19,41 +19,47 @@
     "    data = f.read()\n",
     "tmp = data.split(\" \")\n",
     "tmp.remove(\"\")\n",
-    "sequence = list(map(int, tmp))\n",
-    "sequence1 = list(map(lambda x: -1 if not x else 1, sequence))\n",
-    "print(sequence)\n",
+    "tmp = list(map(int, tmp))\n",
+    "sequence1 = list(map(lambda x: -1 if not x else 1, tmp))\n",
+    "print(tmp)\n",
     "print(sequence1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-10\n"
+      "1\n",
+      "1\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1.9999999999984626"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from task1 import frequency_bitwise_test\n",
-    "sequence2 = [1, 1, 1, 1, 1, 1, 1, -1, 1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, -1, -1, 1, 1, -1, -1, -1, -1, -1, -1, -1, 1, -1, 1, -1, 1, -1, 1, -1, 1, 1, 1, -1, 1, 1, -1, -1, 1, -1, 1, -1, 1, -1, 1, 1, -1, 1, -1, -1, -1, -1, -1, -1, -1, -1, 1, -1, -1, -1, 1, -1, -1, 1, 1, -1, 1, -1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, 1, -1, -1, -1, 1, -1, 1, -1, 1, 1, -1, 1, 1, -1, 1, -1, 1, -1, -1, -1, 1, 1, 1, 1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, 1]\n",
-    "print(sum(sequence2))\n",
-    "frequency_bitwise_test(sequence2)"
+    "# import mat\n",
+    "tmp = [1, 2, 3]\n",
+    "for i in range(0, len(tmp)-1):\n",
+    "    if (tmp[i] != tmp[i+1]):\n",
+    "        print(1)\n",
+    "a = 8*32\n",
+    "i = 0\n",
+    "while i > 16:\n",
+    "    j = i\n",
+    "    while j > j+8:\n",
+    "        print(j)\n",
+    "        i= j"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
